<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
                android:background="?android:attr/activatedBackgroundIndicator">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:weightSum="1"
        android:id="@+id/linearLayout6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="12dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView_SEL_bar_item_history"
            android:layout_marginRight="4sp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.90">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_sel"
                android:id="@+id/textView_SEL_item_history"
                android:textStyle="bold"
                android:textSize="12sp"
                android:gravity="center_vertical|center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_date"
                android:id="@+id/textView_Date_item_history"
                android:textSize="12dp"
                android:textStyle="bold"
                android:textColor="#fff" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_length"
                    android:id="@+id/textView_length_item_history"
                    android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/list_view_layout_width"
            android:layout_height="wrap_content"
            android:id="@+id/history_uploaded"
            app:srcCompat="@drawable/uploaded"
            android:contentDescription="@string/history_uploadeddescr" />

    </LinearLayout>

</RelativeLayout>