<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CalibrationActivity">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/calibration_mode_label"
                    android:text="@string/calibration_mode"
                    android:textSize="15sp" />
                <Spinner
                    android:id="@+id/spinner_calibration_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                </LinearLayout>
                <CheckBox
                    android:id="@+id/checkbox_test_gain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calibration_test_gain_checkbox"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_progress"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibration_status_waiting_for_user_start"
            android:id="@+id/textView_recording_state"
            android:textSize="15sp" />

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar_wait_calibration_recording"
            android:layout_marginTop="6dp" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibration_leq_title"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView_value_SL_i"
                android:layout_width="80dp"
                android:textSize="25sp"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:text="@string/no_valid_dba_value"
                android:textStyle="normal" />
            <TextView
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SL_dB"
                android:textSize="20sp"/>
        </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibration_measure_title"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:layout_width="80dp"
                android:textSize="25sp"
                android:gravity="right"
                android:id="@+id/edit_text_external_measured"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="numberDecimal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:text="@string/SL_dB"
                android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
            </LinearLayout>
        </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_start"
            android:text="@string/calibration_button_start"/>
        <Button
            android:id="@+id/btn_apply"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibration_button_apply"
            android:enabled="false"/>
        <Button
            android:id="@+id/btn_reset"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibration_button_reset"
            android:enabled="false"/>
        </LinearLayout>

    </LinearLayout>
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="@dimen/list_view_layout_width"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>
